tests/errors/semantic/non_blocking/INCOMPATIBLE_ARGUMENT.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def f(x : int):
    y = x + 1
    return y

z = f(2.3)
print(z)
